<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="0"
        android:layout_weight="1"
        android:background="@color/gray"
        android:gravity="end|center"
        android:textSize="40sp"
        android:inputType="textPersonName"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buCE"
                android:text="@string/CE"
                android:onClick="clearemptyEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/blueback"></androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buClear"
                android:text="@string/C"
                android:onClick="clearEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/blueback"></androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buBack"
                android:text="@string/back"
                android:onClick="deleteEvent"
                android:layout_marginRight="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="19sp"
                android:layout_weight="1"
                android:background="@color/blueback"></androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buDivide"
                android:text="@string/Divide"
                android:onClick="operatorEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/blueback"></androidx.appcompat.widget.AppCompatButton>
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bu7"
                android:text="@string/seven"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:textColor="@color/black"></androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bu8"
                android:text="@string/eight"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:textColor="@color/black"></androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bu9"
                android:text="@string/nine"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:textColor="@color/black"></androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buMultiply"
                android:text="@string/multiply"
                android:onClick="operatorEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/blueback"></androidx.appcompat.widget.AppCompatButton>
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bu4"
                android:text="@string/four"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:textColor="@color/black"></androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bu5"
                android:text="@string/five"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:textColor="@color/black"></androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bu6"
                android:text="@string/six"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:textColor="@color/black"></androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buMinus"
                android:text="@string/minus"
                android:onClick="operatorEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginTop="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/blueback"
                android:textSize="30sp"></androidx.appcompat.widget.AppCompatButton>
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bu1"
                android:text="@string/one"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:textColor="@color/black"></androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bu2"
                android:text="@string/two"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:textColor="@color/black"></androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bu3"
                android:text="@string/three"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:textColor="@color/black"></androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buPlus"
                android:text="@string/plus"
                android:onClick="operatorEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/blueback"></androidx.appcompat.widget.AppCompatButton>
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buPlusMinus"
                android:text="@string/plus_minus"
                android:onClick="numberEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginTop="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/gray"
                android:textSize="30sp"
                android:textColor="@color/black"></androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bu0"
                android:text="@string/zero"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:textColor="@color/black"></androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buComa"
                android:text="@string/coma"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:textColor="@color/black"></androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buResult"
                android:text="@string/equal"
                android:onClick="equalEvent"
                android:layout_marginRight="1pt"
                android:layout_marginTop="1pt"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:textSize="30sp"
                android:layout_weight="1"
                android:background="@color/blueback"></androidx.appcompat.widget.AppCompatButton>
        </TableRow>

    </TableLayout>

</LinearLayout>